--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,35 +2,35 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #ffffff; 
+	background-color: #282a36; 
 	margin: 4% 24%;
 	}
 
 h1 {
-	font-size: 56px;
+	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #ffffff;
+	color: #50fa7b;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #696969; 
+	color: #f8f8f2; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #696969; 
+	color: #50fa7b; 
 	text-align: left;
 }
 
 h4 {
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: black; 
+	color: #f8f8f2; 
 	text-align: left;
 }
 	
@@ -38,17 +38,19 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
+	color: #f8f8f2;
+	background-color: #282a36;
 }
 
 a {
-	color: #f22613; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
-	color: #f22613; 
+	color: #f8f8f2; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
@@ -62,15 +64,30 @@ hr {
 }
 
 code {
-	background-color: #e3e3e3;
+	background-color: #6272a4;
 	border-radius: 5px;
 	padding: 1px 6px 1px;
 }
 
 footer {
 	float: right; 
-	font-size: 20px
+	font-size: 20px;
+	color: #f8f8f2;
 }
+
+ ul {
+  list-style: none;
+}
+
+ul li::before {
+  content: "\2022";
+  color: #f8f8f2;
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
 
 #mail {
 	color: #f22613; 
@@ -90,7 +107,7 @@ footer {
 #hover-area {
 	text-align:left;
   	display: block;
-	color: #f22613; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -98,7 +115,7 @@ footer {
 
 #reveal {
 display: none;
-	color: black;
+	color: #f8f8f2;
 	padding: 1%;
 }
 
@@ -106,7 +123,7 @@ display: none;
 	display: block;
 	text-align:left;
   	display: block;
-	color: f22613; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -116,4 +133,3 @@ display: none;
 	margin: 0 auto;
 	padding: 0;	
 }
-
