--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
@@ -43,7 +42,7 @@ p {
 }
 
 a {
-	color: #bd93f9; 
+	color: #8be9fd; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -123,7 +122,7 @@ display: none;
 	display: block;
 	text-align:left;
   	display: block;
-	color: #bd93f9; 
+	color: #8be9fd; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
